--- a/TARpe21ShopAljas.ApplicationServices/TARpe21ShopAljas.ApplicationServices.csproj
+++ b/TARpe21ShopAljas.ApplicationServices/TARpe21ShopAljas.ApplicationServices.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Server.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.22">
       <PrivateAssets>all</PrivateAssets>
@@ -15,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
     <ProjectReference Include="..\TARpe21ShopAljas.Data\TARpe21ShopAljas.Data.csproj" />
     <ProjectReference Include="..\TARpe21ShopAljas.Core\TARpe21ShopAljas.Core.csproj" />
     <ProjectReference Include="..\TARpe21ShopAljas.Core\TARpe21ShopAljas.Core.csproj" />
