Start working on Cars.

--- a/TARpe21ShopAljas/TARpe21ShopAljas.csproj
+++ b/TARpe21ShopAljas/TARpe21ShopAljas.csproj
@@ -23,4 +23,9 @@
     <ProjectReference Include="..\TARpe21ShopAljas.Data\TARpe21ShopAljas.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Car\" />
+    <Folder Include="Views\Cars\" />
+  </ItemGroup>
+
 </Project>
