Add Weather controllers, Services, Dtos, Views.

--- a/TARpe21ShopAljas/appsettings.json
+++ b/TARpe21ShopAljas/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TARpe2Shop;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Shop;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
 
   "Logging": {
