--- a/TARpe21ShopAljas.ApplicationServices/TARpe21ShopAljas.ApplicationServices.csproj
+++ b/TARpe21ShopAljas.ApplicationServices/TARpe21ShopAljas.ApplicationServices.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Server.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.23" />
@@ -28,6 +29,7 @@
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
 	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
 	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+	  <PackageReference Include="MimeKit" Version="4.3.0" />
 	  <PackageReference Include="Nancy" Version="2.0.0" />
 	  <PackageReference Include="xunit" Version="2.6.2" />
 	  <PackageReference Include="xunit.runner.visualstudio" Version="2.5.4">
